--- a/clinical/coronary.html
+++ b/clinical/coronary.html
@@ -172,46 +172,46 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="coronary/_introduction.md" no-shadow></zero-md>
+        <zero-md id="intro" src="coronary/_introduction.md" no-shadow></zero-md>
       </span>
       <span id="anatomy_and_image">
-        <zero-md class="embedMath" src="coronary/_anatomy_and_image_data.md" no-shadow></zero-md>
+        <zero-md src="coronary/_anatomy_and_image_data.md" no-shadow></zero-md>
       </span>
       <span id="model">
-        <zero-md class="embedMath" src="coronary/_model_construction_and_meshing.md" no-shadow></zero-md>
+        <zero-md src="coronary/_model_construction_and_meshing.md" no-shadow></zero-md>
       </span>
       <span id="sim">
-        <zero-md class="embedMath" src="coronary/_coronary_simulation.md" no-shadow></zero-md>
+        <zero-md src="coronary/_coronary_simulation.md" no-shadow></zero-md>
       </span>
       <span id="inflow_bc">
-        <zero-md class="embedMath" src="coronary/_inflow_bc.md" no-shadow></zero-md>
+        <zero-md src="coronary/_inflow_bc.md" no-shadow></zero-md>
       </span>
       <span id="aortic_bc">
-        <zero-md class="embedMath" src="coronary/_aortic_outflow_bc.md" no-shadow></zero-md>
+        <zero-md src="coronary/_aortic_outflow_bc.md" no-shadow></zero-md>
       </span>
       <span id="coronary_bc">
-        <zero-md class="embedMath" src="coronary/_coronary_outflow_bc.md" no-shadow></zero-md>
+        <zero-md src="coronary/_coronary_outflow_bc.md" no-shadow></zero-md>
       </span>
       <span id="parameter_selection">
-        <zero-md class="embedMath" src="coronary/_parameter_selection.md" no-shadow></zero-md>
+        <zero-md src="coronary/_parameter_selection.md" no-shadow></zero-md>
       </span>
       <span id="wall_properties">
-        <zero-md class="embedMath" src="coronary/_wall_properties.md" no-shadow></zero-md>
+        <zero-md src="coronary/_wall_properties.md" no-shadow></zero-md>
       </span>
       <span id="solver_params">
-        <zero-md class="embedMath" src="coronary/_solver_parameters.md" no-shadow></zero-md>
+        <zero-md src="coronary/_solver_parameters.md" no-shadow></zero-md>
       </span>
       <span id="run_job">
-        <zero-md class="embedMath" src="coronary/_run_job.md" no-shadow></zero-md>
+        <zero-md src="coronary/_run_job.md" no-shadow></zero-md>
       </span>
       <span id="results">
-        <zero-md class="embedMath" src="coronary/_simulation_results.md" no-shadow></zero-md>
+        <zero-md src="coronary/_simulation_results.md" no-shadow></zero-md>
       </span>
       <span id="conclusion">
-        <zero-md class="embedMath" src="coronary/_conclusion.md" no-shadow></zero-md>
+        <zero-md src="coronary/_conclusion.md" no-shadow></zero-md>
       </span>
       <span id="references">
-        <zero-md class="embedMath" src="coronary/_references.md" no-shadow></zero-md>
+        <zero-md src="coronary/_references.md" no-shadow></zero-md>
       </span>
 
 
@@ -223,10 +223,8 @@
 
 
   <script>
-    var allZero_MD_File = document.getElementsByClassName("embedMath");
-    for(var i = 0; i < allZero_MD_File.length; i++)
-    {
-      allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
+    var a_zero_md_element = document.getElementById("intro");
+    a_zero_md_element.addEventListener('zero-md-rendered', () => {
         let el = document.createElement('script');
         el.type = "text/javascript";
         el.async = true;
@@ -234,9 +232,8 @@
         el.src = "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js";
         document.head.appendChild(el)
     });
-    }
-    
   </script>
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
