--- a/documentation/references.html
+++ b/documentation/references.html
@@ -146,34 +146,34 @@
 
     <section class="docsSection" style="float: right">
       <span id="refSec1">
-        <zero-md class="embedMath" src="references/_flowsolver.md" no-shadow></zero-md>
+        <zero-md id="intro" src="references/_flowsolver.md" no-shadow></zero-md>
       </span>
       <span id="refSec2">
-        <zero-md class="embedMath" src="references/_bc.md" no-shadow></zero-md>
+        <zero-md src="references/_bc.md" no-shadow></zero-md>
       </span>
       <span id="refSec3">
-        <zero-md class="embedMath" src="references/_linsolver.md" no-shadow></zero-md>
+        <zero-md src="references/_linsolver.md" no-shadow></zero-md>
       </span>
       <span id="FSI">
-        <zero-md class="embedMath" src="references/_fsi.md" no-shadow></zero-md>
+        <zero-md src="references/_fsi.md" no-shadow></zero-md>
       </span>
       <span id="refSec4">
-        <zero-md class="embedMath" src="references/_modeling.md" no-shadow></zero-md>
+        <zero-md src="references/_modeling.md" no-shadow></zero-md>
       </span>
       <span id="refSec5">
-        <zero-md class="embedMath" src="references/_meshing.md" no-shadow></zero-md>
+        <zero-md src="references/_meshing.md" no-shadow></zero-md>
       </span>
       <span id="refSec6">
-        <zero-md class="embedMath" src="references/_validation.md" no-shadow></zero-md>
+        <zero-md src="references/_validation.md" no-shadow></zero-md>
       </span>
       <span id="refSec7">
-        <zero-md class="embedMath" src="references/_clinicalapps.md" no-shadow></zero-md>
+        <zero-md src="references/_clinicalapps.md" no-shadow></zero-md>
       </span>
       <span id="UQ">
-        <zero-md class="embedMath" src="references/_uq.md" no-shadow></zero-md>
+        <zero-md src="references/_uq.md" no-shadow></zero-md>
       </span>
       <span id="refSec8">
-        <zero-md class="embedMath" src="references/_othercontributors.md" no-shadow></zero-md>
+        <zero-md src="references/_othercontributors.md" no-shadow></zero-md>
       </span>      
     </section>
   </section>
@@ -183,10 +183,8 @@
 
 
   <script>
-    var allZero_MD_File = document.getElementsByClassName("embedMath");
-    for(var i = 0; i < allZero_MD_File.length; i++)
-    {
-      allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
+    var a_zero_md_element = document.getElementById("intro");
+    a_zero_md_element.addEventListener('zero-md-rendered', () => {
         let el = document.createElement('script');
         el.type = "text/javascript";
         el.async = true;
@@ -194,8 +192,6 @@
         el.src = "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js";
         document.head.appendChild(el)
     });
-    }
-    
   </script>
 
   <!-- Optional JavaScript -->
