--- a/documentation/simcardio.html
+++ b/documentation/simcardio.html
@@ -200,124 +200,124 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="simcardio/_intro.md" no-shadow></zero-md>
+        <zero-md id="intro" src="simcardio/_intro.md" no-shadow></zero-md>
       </span>
       <span id="automatic-cardiac-modeling">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_auto-cardiac-modeling.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_auto-cardiac-modeling.md" no-shadow></zero-md>
       </span>
       <span id="seg-intro">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_seg-intro.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_seg-intro.md" no-shadow></zero-md>
       </span>
       <span id="seg-inputs">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_seg-inputs.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_seg-inputs.md" no-shadow></zero-md>
       </span>
       <span id="seg-pre-trained-models">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_seg-pre-trained-models.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_seg-pre-trained-models.md" no-shadow></zero-md>
       </span>
       <span id="seg-predict">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_seg-predict.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_seg-predict.md" no-shadow></zero-md>
       </span>
       <span id="seg-visualize">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_seg-visualize.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_seg-visualize.md" no-shadow></zero-md>
       </span>
       <span id="mesh-intro">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_mesh-intro.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_mesh-intro.md" no-shadow></zero-md>
       </span>
       <span id="mesh-lv-surface">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_mesh-lv-surface.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_mesh-lv-surface.md" no-shadow></zero-md>
       </span>
       <span id="mesh-volume">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_mesh-volume.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_mesh-volume.md" no-shadow></zero-md>
       </span>
       <span id="mesh-register">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_mesh-register.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_mesh-register.md" no-shadow></zero-md>
       </span>
       <span id="mesh-motion">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_mesh-motion.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_mesh-motion.md" no-shadow></zero-md>
       </span>
       <span id="refs">
-        <zero-md class="embedMath" src="simcardio/cardiacModeling/_refs.md" no-shadow></zero-md>
+        <zero-md src="simcardio/cardiacModeling/_refs.md" no-shadow></zero-md>
       </span>
       <span id="cep-modeling">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-modeling.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_cep-modeling.md" no-shadow></zero-md>
       </span>
       <span id="cep-intro">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-intro.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_cep-intro.md" no-shadow></zero-md>
       </span>
       <span id="cep-theory">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-theory.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_cep-theory.md" no-shadow></zero-md>
       </span>
       <span id="cep-activation-models">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-activation-models.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_cep-activation-models.md" no-shadow></zero-md>
       </span>
       <span id="purkinje">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_purkinje.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_purkinje.md" no-shadow></zero-md>
       </span>
       <span id="pnet-intro">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_pnet-intro.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_pnet-intro.md" no-shadow></zero-md>
       </span>
       <span id="pnet-install">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_pnet-install.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_pnet-install.md" no-shadow></zero-md>
       </span>
       <span id="pnet-workflow">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_pnet-workflow.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_pnet-workflow.md" no-shadow></zero-md>
       </span>
       <span id="pnet-parameters">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_pnet-parameters.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_pnet-parameters.md" no-shadow></zero-md>
       </span>
       <span id="pnet-issues">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_pnet-issues.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_pnet-issues.md" no-shadow></zero-md>
       </span>
       <span id="cep-examples">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-examples.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_cep-examples.md" no-shadow></zero-md>
       </span>
       <span id="cep-example-block">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-example-block.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_cep-example-block.md" no-shadow></zero-md>
       </span>
       <span id="cep-example-pnet">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-example-pnet.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_cep-example-pnet.md" no-shadow></zero-md>
       </span>
       <span id="cep-refs">
-        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-refs.md" no-shadow></zero-md>
+        <zero-md src="simcardio/electrophysiology/_cep-refs.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-modeling">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-modeling.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-modeling.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-solve">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-solve.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-solve.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-obtain-svFSI">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-obtain-svFSI.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-obtain-svFSI.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-mesh-gen">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-mesh-gen.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-mesh-gen.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-fiber-gen">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-fiber-gen.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-fiber-gen.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-solver-input">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-solver-input.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-solver-input.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-simulation">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-simulation.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-simulation.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-theory">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-theory.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-theory.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-kinematics">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-kinematics.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-kinematics.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-struct">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-struct.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-struct.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-ustruct">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-ustruct.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-ustruct.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-material-models">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-material-models.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-material-models.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-refs">
-        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-refs.md" no-shadow></zero-md>
+        <zero-md src="simcardio/mechanics/_mechanics-refs.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
@@ -327,10 +327,8 @@
 
 
   <script>
-    var allZero_MD_File = document.getElementsByClassName("embedMath");
-    for(var i = 0; i < allZero_MD_File.length; i++)
-    {
-      allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
+    var a_zero_md_element = document.getElementById("intro");
+    a_zero_md_element.addEventListener('zero-md-rendered', () => {
         let el = document.createElement('script');
         el.type = "text/javascript";
         el.async = true;
@@ -338,8 +336,6 @@
         el.src = "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js";
         document.head.appendChild(el)
     });
-    }
-    
   </script>
 
   <!-- Optional JavaScript -->
