--- a/documentation/flowsolver.html
+++ b/documentation/flowsolver.html
@@ -15,7 +15,7 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  
+
   <script>
     window.ZeroMdConfig = {
       cssUrls: ["../css/bootstrap.css","../css/grayscale.css","../css/standards.css","../css/shop-item.css","../css/documentation.css"]
@@ -36,7 +36,7 @@
 <script
     type="module"
     src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"
-    ></script>
+></script>
 
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="../img/svIcon.png"></link>
@@ -187,76 +187,76 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="flowsolver/_intro.md" no-shadow></zero-md>
+        <zero-md id="intro" src="flowsolver/_intro.md" no-shadow></zero-md>
       </span>
       <span id="overview">
-        <zero-md class="embedMath" src="flowsolver/_overview.md" no-shadow></zero-md>
+        <zero-md  src="flowsolver/_overview.md" no-shadow></zero-md>
       </span>
       <span id="bcphysics">
-        <zero-md class="embedMath" src="flowsolver/_bcPhysics.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_bcPhysics.md" no-shadow></zero-md>
       </span>
       <span id="creatingjob">
-        <zero-md class="embedMath" src="flowsolver/_creatingjob.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_creatingjob.md" no-shadow></zero-md>
       </span>
       <span id="basic">
-        <zero-md class="embedMath" src="flowsolver/_basic.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_basic.md" no-shadow></zero-md>
       </span>
       <span id="inflowbc">
-        <zero-md class="embedMath" src="flowsolver/_inflowbc.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_inflowbc.md" no-shadow></zero-md>
       </span>
       <span id="outletbc">
-        <zero-md class="embedMath" src="flowsolver/_outletbc.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_outletbc.md" no-shadow></zero-md>
       </span>
       <span id="wallproperties">
-        <zero-md class="embedMath" src="flowsolver/_wallproperties.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_wallproperties.md" no-shadow></zero-md>
       </span>
       <span id="solverparameters">
-        <zero-md class="embedMath" src="flowsolver/_solverparameters.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_solverparameters.md" no-shadow></zero-md>
       </span>
       <span id="creatingdata">
-        <zero-md class="embedMath" src="flowsolver/_creatingdata.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_creatingdata.md" no-shadow></zero-md>
       </span>
       <span id="runningjob">
-        <zero-md class="embedMath" src="flowsolver/_runningjob.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_runningjob.md" no-shadow></zero-md>
       </span>
       <span id="postprocess">
-        <zero-md class="embedMath" src="flowsolver/_postProcess.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_postProcess.md" no-shadow></zero-md>
       </span>
       <span id="examples">
-        <zero-md class="embedMath" src="flowsolver/_examples.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_examples.md" no-shadow></zero-md>
       </span>
       <span id="example2">
-        <zero-md class="embedMath" src="flowsolver/_example2.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_example2.md" no-shadow></zero-md>
       </span>
       <span id="example3">
-        <zero-md class="embedMath" src="flowsolver/_example3.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_example3.md" no-shadow></zero-md>
       </span>
       <span id="example4">
-        <zero-md class="embedMath" src="flowsolver/_example4.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_example4.md" no-shadow></zero-md>
       </span>
       <span id="appendix">
-        <zero-md class="embedMath" src="flowsolver/_appendix.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_appendix.md" no-shadow></zero-md>
       </span>
       <span id="solverconfiguration">
-        <zero-md class="embedMath" src="flowsolver/_solverconfiguration.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_solverconfiguration.md" no-shadow></zero-md>
       </span>
       <span id="presolvercommands">
-        <zero-md class="embedMath" src="flowsolver/_presolverCommands.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_presolverCommands.md" no-shadow></zero-md>
       </span>
       <span id="bctfile">
-        <zero-md class="embedMath" src="flowsolver/_bctFile.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_bctFile.md" no-shadow></zero-md>
       </span>
       <span id="solverinp">
-        <zero-md class="embedMath" src="flowsolver/_solverInpGuide.md" no-shadow></zero-md>
+        <zero-md id="embedMath" src="flowsolver/_solverInpGuide.md" no-shadow></zero-md>
       </span>
       <span id="impbcfile">
-        <zero-md class="embedMath" src="flowsolver/_impFiles.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_impFiles.md" no-shadow></zero-md>
       </span>
       <span id="rcrtfile">
-        <zero-md class="embedMath" src="flowsolver/_rcrtFile.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_rcrtFile.md" no-shadow></zero-md>
       </span>
       <span id="cortfile">
-        <zero-md class="embedMath" src="flowsolver/_cortFile.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/_cortFile.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
@@ -266,10 +266,8 @@
 
 
   <script>
-    var allZero_MD_File = document.getElementsByClassName("embedMath");
-    for(var i = 0; i < allZero_MD_File.length; i++)
-    {
-      allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
+    var a_zero_md_element = document.getElementById("intro");
+    a_zero_md_element.addEventListener('zero-md-rendered', () => {
         let el = document.createElement('script');
         el.type = "text/javascript";
         el.async = true;
@@ -277,8 +275,6 @@
         el.src = "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js";
         document.head.appendChild(el)
     });
-    }
-    
   </script>
 
   <!-- Optional JavaScript -->
