--- a/documentation/genbc.html
+++ b/documentation/genbc.html
@@ -141,19 +141,19 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="genbc/_introduction.md" no-shadow></zero-md>
+        <zero-md id="intro" src="genbc/_introduction.md" no-shadow></zero-md>
       </span>
       <span id="sv_prep">
-        <zero-md class="embedMath" src="genbc/_sv_prep.md" no-shadow></zero-md>
+        <zero-md src="genbc/_sv_prep.md" no-shadow></zero-md>
       </span>
       <span id="genbc_setup">
-        <zero-md class="embedMath" src="genbc/_genbc_setup.md" no-shadow></zero-md>
+        <zero-md src="genbc/_genbc_setup.md" no-shadow></zero-md>
       </span>
       <span id="final_steps">
-        <zero-md class="embedMath" src="genbc/_final_steps.md" no-shadow></zero-md>
+        <zero-md src="genbc/_final_steps.md" no-shadow></zero-md>
       </span>
       <span id="pressure_waveform">
-        <zero-md class="embedMath" src="genbc/_pressure_waveform.md" no-shadow></zero-md>
+        <zero-md src="genbc/_pressure_waveform.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
@@ -163,10 +163,8 @@
 
 
   <script>
-    var allZero_MD_File = document.getElementsByClassName("embedMath");
-    for(var i = 0; i < allZero_MD_File.length; i++)
-    {
-      allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
+    var a_zero_md_element = document.getElementById("intro");
+    a_zero_md_element.addEventListener('zero-md-rendered', () => {
         let el = document.createElement('script');
         el.type = "text/javascript";
         el.async = true;
@@ -174,8 +172,6 @@
         el.src = "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js";
         document.head.appendChild(el)
     });
-    }
-    
   </script>
 
   <!-- Optional JavaScript -->
