--- a/documentation/flowsolver.html
+++ b/documentation/flowsolver.html
@@ -23,14 +23,14 @@
   </script>
   
   <script>
-    window.MathJax = {
-      tex: {
-        inlineMath: [
-          ['$', '$'],
-          ['\\(', '\\)']
-        ]
-      }
-    }
+    MathJax = {
+        tex: {
+          inlineMath: [
+            ['$', '$'],
+            ['\\(', '\\)'],
+          ],
+        },
+      };
   </script>
 
 <script
@@ -266,8 +266,7 @@
 
 
   <script>
-    var a_zero_md_element = document.getElementById("intro");
-    a_zero_md_element.addEventListener('zero-md-rendered', () => {
+    intro.addEventListener('zero-md-rendered', () => {
         let el = document.createElement('script');
         el.type = "text/javascript";
         el.async = true;
