fill in template markdown files

--- a/documentation/template.html
+++ b/documentation/template.html
@@ -158,6 +158,9 @@
       <span id="section_1_sub_section_2">
         <zero-md src="template/section_1_sub_section_2.md" no-shadow></zero-md>
       </span>
+      <span id="section_1_sub_section_3">
+        <zero-md src="template/section_1_sub_section_3.md" no-shadow></zero-md>
+      </span>
       <span id="section_2">
         <zero-md src="template/section_2.md" no-shadow></zero-md>
       </span>
@@ -166,6 +169,9 @@
       </span>
       <span id="section_2_sub_section_2">
         <zero-md src="template/section_2_sub_section_2.md" no-shadow></zero-md>
+      </span>
+      <span id="section_2_sub_section_3">
+        <zero-md src="template/section_2_sub_section_3.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
