update features section to applications

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <!-- browser tab labels -->
-    <link rel="shortcut icon" type="image/jpg" href="img/svIcon.png"></link>
+    <link rel="shortcut icon" type="image/png" href="img/svIcon.png"></link>
     <title>SimVascular</title>
   </head>
   <body>
@@ -104,45 +104,65 @@
     <div class="firstHeader" style="height: 100%">
       <div class="introDescription">
         <h1 style="text-align: center;">Simvascular</h1>
-        <p class="paddingIntro">The only fully opensource software package providing a complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
+        <p class="paddingIntro">The only fully open-source software package providing a complete pipeline from medical image data segmentation to patient specific blood flow simulation and analysis.</p>
         <p class="paddingIntro">The <a target="_blank" href="https://gateway.simvascular.org/">SimVascular Supercomputing Gateway</a> provides access to High-Performance Computing (HPC) clusters for running simulations using SimVascular CFD solvers. Simulations benefit from the performance levels that only large-scale HPC systems can offer and typically run an order of magnitude faster than on most workstations.</p>
       </div>
     </div>
   </div>
   <div>
       <div style="margin-top: 15px" class="newSectionHeader">
-        <h1 id="features">Features</h1>
+        <h1 id="features">Applications</h1>
       </div>
       <div class="newSectionContent">
         <div class="row">
           <div class="col-lg-4 col-md-6 col-12">
-            <div class="innerHeader">
-              <h2><i class="iconInHeader fa-solid fa-cube"></i>GUI</h2>
+            <div class="featuresHeader">
+              <h2>SimVascular</h2>
             </div>
             <div class="featuresText">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet eius eos sequi excepturi incidunt cupiditate quos consectetur facilis unde temporibus aperiam, consequatur maiores, fugit magni deleniti error maxime. Harum.</p>
-              <p style="text-align: center;"><a class="featuresLinks" href="" target="_blank">Click here to learn more.</a></p>
-              </div>
+              <p> An interactive application for implementing all components
+                of the image-based pipeline</p>
+            </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
-            <div class="innerHeader">
-              <h2><i class="iconInHeader fa-solid fa-calculator"></i>Solver</h2>
+            <div class="featuresHeader">
+              <h2>svSolver</h2>
             </div>
             <div class="featuresText">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet eius eos sequi excepturi incidunt cupiditate quos consectetur facilis unde temporibus aperiam, consequatur maiores, fugit magni deleniti error maxime. Harum.</p>
-              <p style="text-align: center;"><a class="featuresLinks" href="" target="_blank">Click here to learn more.</a></p>
+              <p>A parallel computational fluid dynamics (CFD) finite element
+                solver incorporating boundary conditions useful for blood flow
+                simulations</p>
             </div>
           </div>
-          <div class="col-lg-4 col-12">
-            <div class="innerHeader">
-              <h2><i class="iconInHeader fa-solid fa-terminal"></i>Python Interface</h2>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="featuresHeader">
+              <h2>svFSI</h2>
             </div>
             <div class="featuresText">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque amet eius eos sequi excepturi incidunt cupiditate quos consectetur facilis unde temporibus aperiam, consequatur maiores, fugit magni deleniti error maxime. Harum.</p>
-              <p style="text-align: center;"><a class="featuresLinks" href="" target="_blank">Click here to learn more.</a></p>
-              </div>
+              <p>A parallel multi-physics finite element solver designed for
+                computational modeling of the cardiovascular system </p>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-12">
+            <div class="featuresHeader">
+              <h2>svOneDSolver</h2>
+            </div>
+            <div class="featuresText">
+              <p>A reduced-order solver for the hemodynamics in
+                deformable 1D vascular networks</p>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-12">
+            <div class="featuresHeader">
+              <h2>svZeroDSolver</h2>
+            </div>
+            <div class="featuresText">
+              <p>A reduced-order solver for the hemodynamics in zerodimensional 
+                lumped parameter models of vascular networks</p>
+            </div>
           </div>
         </div>
+        <a style="text-align: center" class="featuresLinks" href="" target="_blank">Click here to learn more.</a>
       </div>
   </div>
 
