update navigation link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <table id="contentOfSkip">
                 <tr id="skipToFeatures">
                   <th>
-                    <p class="skipItem">Features</p>
+                    <p class="skipItem">Applications</p>
                   </th>
                 </tr>
                 <tr id="skipToDownload">
