--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
     </div>
   </div>
 
-  <div class="everyOtherSection"> 
+  <div class="everyOtherSection" style="padding-bottom: 30px; margin-bottom: 0"> 
     <div class="newSectionHeader">
       <h1 id="contact">Contact Us</h1>
       </div>
